@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.22 2005/12/28 16:58:43 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.23 2006/01/29 18:58:03 rocket Exp $
 
 """
 Builder class for a stage1 installation tarball build.
@@ -35,37 +35,29 @@ class stage1_target(generic_stage_target):
 		"/usr/lib/python2.4/email", "/usr/lib/python2.4/lib-tk",\
 		"/usr/share/zoneinfo"])
 
-        def override_chost(self):
-            #if os.environ.has_key("CHOST"):
-            #    self.settings["CHOST"] = os.environ["CHOST"]
-            if self.settings.has_key("chost"):
-                self.settings["CHOST"]=list_to_string(self.settings["chost"])
+	def override_chost(self):
+		if self.settings.has_key("chost"):
+			self.settings["CHOST"]=list_to_string(self.settings["chost"])
 
-        def override_cflags(self):
-            #if os.environ.has_key("CFLAGS"):
-            #    self.settings["CFLAGS"] = os.environ["CFLAGS"]
-            if self.settings.has_key("cflags"):
-                self.settings["CFLAGS"]=list_to_string(self.settings["cflags"])
+	def override_cflags(self):
+		if self.settings.has_key("cflags"):
+			self.settings["CFLAGS"]=list_to_string(self.settings["cflags"])
 
-        def override_cxxflags(self):
-            #if os.environ.has_key("CXXFLAGS"):
-            #    self.settings["CXXFLAGS"] = os.environ["CXXFLAGS"]
-            if self.settings.has_key("cxxflags"):
-                self.settings["CXXFLAGS"]=list_to_string(self.settings["cxxflags"])
+	def override_cxxflags(self):
+		if self.settings.has_key("cxxflags"):
+			self.settings["CXXFLAGS"]=list_to_string(self.settings["cxxflags"])
 
-        def override_ldflags(self):
-            #if os.environ.has_key("LDFLAGS"):
-            #    self.settings["LDFLAGS"] = os.environ["LDFLAGS"]
-            if self.settings.has_key("ldflags"):
-                self.settings["LDFLAGS"]=list_to_string(self.settings["ldflags"])
+	def override_ldflags(self):
+		if self.settings.has_key("ldflags"):
+			self.settings["LDFLAGS"]=list_to_string(self.settings["ldflags"])
 
-		def set_portage_overlay(self):
-			generic_stage_target.set_portage_overlay(self)
-			if self.settings.has_key("portage_overlay"):
-				print "\nWARNING !!!!!"
-				print "\tUsing an portage overlay for earlier stages could cause build issues."
-				print "\tIf you break it, you buy it. Don't complain to us about it."
-				print "\tDont say we did not warn you\n"
+	def set_portage_overlay(self):
+		generic_stage_target.set_portage_overlay(self)
+		if self.settings.has_key("portage_overlay"):
+			print "\nWARNING !!!!!"
+			print "\tUsing an portage overlay for earlier stages could cause build issues."
+			print "\tIf you break it, you buy it. Don't complain to us about it."
+			print "\tDont say we did not warn you\n"
 
 def register(foo):
 	foo.update({"stage1":stage1_target})
