@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.541 2006/01/29 14:42:17 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.542 2006/01/29 18:58:03 rocket Exp $
+
+  29 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py,
+  modules/stage2_target.py:
+  space cleanups contributed from `Kumba
 
   29 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
   add grp/use to valid_values in the grp module
